Source/WebCore/rendering/RenderTable.h
@@ -231,7 +231,7 @@ private:
 
     virtual void computeLogicalWidth();
 
-    virtual IntRect overflowClipRect(int tx, int ty);
+    virtual IntRect overflowClipRect(int tx, int ty, OverlayScrollbarSizeRelevancy relevancy = IgnoreOverlayScrollbarSize);
 
     virtual void addOverflowFromChildren();
 
